[tool.poetry]
name = "nyquist_explorer"
version = "0.1.0"
description = ""
authors = ["Karan Rajagopalan <karan83k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
scipy = "^1.7.3"
xarray = "^0.21.1"
netCDF4 = "^1.5.8"
dash = "^2.1.0"
dash-bootstrap-components = "^1.0.2"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
