[tool.poetry]
name = "nyquist-explorer"
version = "0.1.1"
description = "Vibration analysis tool."
authors = ["Karan Rajagopalan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
Brotli = "1.0.9"
cftime = "1.6.2"
click = "8.1.3"
colorama = "0.4.5"
dash = "2.6.2"
dash-bootstrap-components = "1.2.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
Flask = "2.2.2"
Flask-Compress = "1.13"
h5py = "3.7.0"
importlib-metadata = "4.13.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
gunicorn = "20.1.0"
MarkupSafe = "2.1.1"
netCDF4 = "1.6.1"
numpy = "1.23.3"
packaging = "21.3"
pandas = "1.5.0"
plotly = "5.10.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.2.1"
scipy = "1.9.1"
six = "1.16.0"
tenacity = "8.1.0"
Werkzeug = "2.2.2"
wincertstore = "0.2"
xarray = "2022.9.0"
zipp = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
